--- a/internal/components/istiomeshgateway/testdata/imgw-expected-resource-dump.yaml
+++ b/internal/components/istiomeshgateway/testdata/imgw-expected-resource-dump.yaml
@@ -232,13 +232,13 @@ spec:
           protocol: TCP
         - containerPort: 15020
           protocol: TCP
-          name: http-merged-prom
+          name: http-int-dbg
         - containerPort: 15021
           protocol: TCP
-          name: http-health-check
+          name: http-ext-health
         - containerPort: 15090
-          name: http-envoy-prom
           protocol: TCP
+          name: http-envoy-prom
         resources:
           limits:
             cpu: "2"
