--- a/internal/assets/manifests/istio-meshgateway/values.yaml
+++ b/internal/assets/manifests/istio-meshgateway/values.yaml
@@ -25,6 +25,7 @@ deployment:
     count: 1
     min: 1
     max: 1
+    targetCPUUtilizationPercentage: 80
   resources:
     limits:
       cpu: "2"
