--- a/internal/assets/manifests/istio-discovery/values.yaml
+++ b/internal/assets/manifests/istio-discovery/values.yaml
@@ -68,7 +68,15 @@ pilot:
   # If false, pilot wil use default values (by default) or user-supplied values.
   configMap: true
 
-  securityContext: {}
+  securityContext:
+    readOnlyRootFilesystem: true
+    runAsUser: 1337
+    runAsGroup: 1337
+    runAsNonRoot: true
+    capabilities:
+      drop:
+      - ALL
+
   podSecurityContext:
     fsGroup: 1337
   volumes: []
@@ -331,6 +339,7 @@ global:
     # examples:
     #     Redirect only selected ports:            --includeInboundPorts="80,8080"
     excludeInboundPorts: ""
+    includeInboundPorts: "*"
 
     # istio egress capture allowlist
     # https://istio.io/docs/tasks/traffic-management/egress.html#calling-external-services-directly
@@ -339,6 +348,7 @@ global:
     # be allowed by the sidecar
     includeIPRanges: "*"
     excludeIPRanges: ""
+    includeOutboundPorts: ""
     excludeOutboundPorts: ""
 
     # Log level for proxy, applies to gateways and sidecars.
@@ -531,6 +541,13 @@ global:
 
   # Determines whether this istiod performs resource validation.
   configValidation: true
+
+  # The name of the CA for workload certificates.
+  # For example, when caName=GkeWorkloadCertificate, GKE workload certificates
+  # will be used as the certificates for workloads.
+  # The default value is "" and when caName="", the CA will be configured by other
+  # mechanisms (e.g., environmental variable CA_PROVIDER).
+  caName: ""
 
 base:
   # For istioctl usage to disable istio config crds in base
