--- a/internal/components/discovery/testdata/icp-test-cr.yaml
+++ b/internal/components/discovery/testdata/icp-test-cr.yaml
@@ -162,6 +162,7 @@ spec:
   watchOneNamespace: false
   jwtPolicy: THIRD_PARTY_JWT
   caAddress: localhost
+  caProvider: Citadel
   distribution: cisco
   httpProxyEnvs:
     noProxy: "localhost"
