--- a/internal/assets/manifests/istio-discovery/resources/grpc-agent.yaml
+++ b/internal/assets/manifests/istio-discovery/resources/grpc-agent.yaml
@@ -6,6 +6,7 @@ metadata:
     kubectl.kubernetes.io/default-logs-container: "{{ index $containers 0 }}",
     kubectl.kubernetes.io/default-container: "{{ index $containers 0 }}",
     {{ end }}
+    sidecar.istio.io/rewriteAppHTTPProbers: "false",
   }
 spec:
   containers:
@@ -14,7 +15,7 @@ spec:
   - name: {{ $container.Name }}
     env:
     - name: "GRPC_XDS_BOOTSTRAP"
-      value: "/var/lib/istio/data/grpc-bootstrap.json"
+      value: "/etc/istio/proxy/grpc-bootstrap.json"
     - name: "GRPC_XDS_EXPERIMENTAL_SECURITY_SUPPORT"
       value: "true"
     volumeMounts:
@@ -45,7 +46,7 @@ spec:
   {{- end }}
     env:
     - name: "GRPC_XDS_BOOTSTRAP"
-      value: "/var/lib/istio/data/grpc-bootstrap.json"
+      value: "/etc/istio/proxy/grpc-bootstrap.json"
     - name: ISTIO_META_GENERATOR
       value: grpc
     - name: OUTPUT_CERTS
