--- a/internal/assets/manifests/istio-discovery/templates/validatingwebhookconfiguration.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/validatingwebhookconfiguration.yaml
@@ -34,6 +34,8 @@ webhooks:
         apiGroups:
           - security.istio.io
           - networking.istio.io
+          - telemetry.istio.io
+          - extensions.istio.io
         apiVersions:
           - "*"
         resources:
@@ -51,38 +53,5 @@ webhooks:
           operator: In
           values:
           - "{{ include "namespaced-revision" . }}"
-  # Webhook handling default validation
-  - name: validation.istio.io
-    clientConfig:
-      # Should change from base but cannot for API compat
-      {{- if .Values.base.validationURL }}
-      url: {{ .Values.base.validationURL }}
-      {{- else }}
-      service:
-        name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
-        namespace: {{ .Release.Namespace }}
-        path: "/validate"
-      {{- end }}
-      caBundle: ""
-    rules:
-      - operations:
-          - CREATE
-          - UPDATE
-        apiGroups:
-          - security.istio.io
-          - networking.istio.io
-          - telemetry.istio.io
-        apiVersions:
-          - "*"
-        resources:
-          - "*"
-        scope: "*"
-    failurePolicy: Ignore
-    sideEffects: None
-    admissionReviewVersions: ["v1beta1", "v1"]
-    objectSelector:
-      matchExpressions:
-        - key: istio.io/rev
-          operator: DoesNotExist
 ---
 {{- end }}
